added academic icons

--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ author:
   email            : "hi@epidro.me"
   uri              : "http://www.epidro.me"
   github           : "epidrome"
+  google-scholar   : "EnRHC-4AAAAJ&hl=en"  
 
 scholar:
   style: elsevier-harvard2
