--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
   email            : "hi@epidro.me"
   uri              : "http://www.epidro.me"
   github           : "epidrome"
-  google-scholar   : "EnRHC-4AAAAJ&hl=en"  
+  orcid            : "0000-0002-5999-9387"
 
 scholar:
   style: elsevier-harvard2
