--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your entire site, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve`. If you change this file, please restart the server process.
-
-
 # Build settings
 markdown: kramdown
 permalink: pretty
@@ -66,7 +58,7 @@ author:
   avatar           : "/assets/images/bio-photo.jpg"
   bio              : "Maker, scholar, mentor"
   location         : "Corfu, Greece"
-  email            : "hi@epidro.me"
+  e-mail           : "hi@epidro.me"
   uri              : "http://www.epidro.me"
   github           : "epidrome"
   orcid            : "0000-0002-5999-9387"
