--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,6 @@
 # main links
 main:
-  - title: ""
-    url: ""
+  - title: "Publications"
+    url: "/publications/"
+  - title: "Resume"
+    url: "/resume/"
