extended pdf cv

--- a/pdf/details.yml
+++ b/pdf/details.yml
@@ -15,7 +15,7 @@ urls:
 
 # Sections
 
-intro: "Maker, scholar, mentor."
+intro: "I am doing research and teaching in the broad area of Informatics with an emphasis on the domains of user interfaces, video, video-games, gamification, crowdsourcing, software, learning, health."
 
 skills:
 - User interfaces, television, mobile, wearables, robots
@@ -26,7 +26,7 @@ skills:
 experience:
 - years: 2008–-now
   employer: Ionian University
-  job: Professor
+  job: Assistant Professor (Software Technologies)
   city: Corfu, Greece
 - years: 2009–-now
   employer: Hellenic Open University
@@ -72,6 +72,7 @@ languages:
 # Settings
 mainfont: Hoefler Text
 fontsize: 10pt
-lang: English
+lang: en-US
 geometry: a4paper, left=35mm, right=35mm, top=51mm, bottom=17mm
+toc: false
 ---
