--- a/en/details.yml
+++ b/en/details.yml
@@ -8,10 +8,14 @@ address:
 - 49100 Corfu
 - Greece
 phone: "+30 26610 87707"
-email: choko@ionio.gr
+email: hi@epidro.me
 # Insert URLs without http://
-urls:
-- users.ionio.gr/choko
+homepage: 'scholar.epidro.me'
+github: epidrome
+telegram: epidrome
+orcid: '0000-0002-5999-9387'
+scholar: 'EnRHC-4AAAAJ'
+
 
 # Sections
 
@@ -32,9 +36,9 @@ experience:
   employer: Hellenic Open University
   job: Adjunct Professor
   city: Athens, Greece
-- years: 2011--2016
+- years: 2014--2016
   employer: Norwegian University of Science and Technology
-  job: Visiting Professor
+  job: Visiting Associate Professor
   city: Trondheim, Norway
 - years: 2006–-2008
   employer: Bauhaus University of Weimar
