--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,7 @@ author:
   avatar           : "/assets/images/bio-photo.jpg"
   bio              : "Maker, scholar, mentor"
   location         : "Corfu, Greece"
+  keybase          : 'epidrome'
   e-mail           : "hi@epidro.me"
   homepage         : "http://www.epidro.me"
   cv               : "en/resume.pdf"
