--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   homepage         : "http://www.epidro.me"
   cv               : "en/resume.pdf"
   github-alt       : "epidrome"
-  google-scholar   : "EnRHC-4AAAAJ"
+  google-scholar   : #"EnRHC-4AAAAJ"
   orcid            : "0000-0002-5999-9387"
 
 scholar:
