--- a/en/details.yml
+++ b/en/details.yml
@@ -30,7 +30,7 @@ skills:
 experience:
 - years: 2008–-now
   employer: Ionian University
-  job: Assistant Professor (Software Technologies)
+  job: Professor (Software Technologies)
   city: Corfu, Greece
 - years: 2009–-now
   employer: Hellenic Open University
@@ -38,7 +38,7 @@ experience:
   city: Athens, Greece
 - years: 2014--2016
   employer: Norwegian University of Science and Technology
-  job: Visiting Associate Professor
+  job: Visiting Professor
   city: Trondheim, Norway
 - years: 2006–-2008
   employer: Bauhaus University of Weimar
