updated contact info

--- a/_config.yml
+++ b/_config.yml
@@ -76,8 +76,8 @@ author:
   bio              : "Maker, scholar, mentor"
   location         : "Corfu, Greece"
   keybase          : 'epidrome'
-  e-mail           : "hi@epidro.me"
-  homepage         : "http://www.epidro.me"
+  e-mail           : "choko@ionio.gr"
+  homepage         : "httpw://users.ionio.gr/choko"
   cv               : "en/resume.pdf"
   github-alt       : "epidrome"
   google-scholar   : #"EnRHC-4AAAAJ"
