--- a/en/details.yml
+++ b/en/details.yml
@@ -8,9 +8,9 @@ address:
 - 49100 Corfu
 - Greece
 phone: "+30 26610 87707"
-email: hi@epidro.me
+email: choko@ionio.gr 
 # Insert URLs without http://
-homepage: 'scholar.epidro.me'
+homepage: 'users.ionio.gr/choko'
 github: epidrome
 telegram: epidrome
 orcid: '0000-0002-5999-9387'
