--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
   location         : "Corfu, Greece"
   keybase          : 'epidrome'
   e-mail           : "choko@ionio.gr"
-  homepage         : "httpw://users.ionio.gr/choko"
+  homepage         : "https://users.ionio.gr/choko"
   cv               : "en/resume.pdf"
   github-alt       : "epidrome"
   google-scholar   : #"EnRHC-4AAAAJ"
