updated en details

--- a/en/details.yml
+++ b/en/details.yml
@@ -10,11 +10,9 @@ address:
 phone: "+30 26610 87707"
 email: choko@ionio.gr 
 # Insert URLs without http://
-homepage: 'users.ionio.gr/choko'
+homepage: 'scholar.epidro.me'
 github: epidrome
-telegram: epidrome
 orcid: '0000-0002-5999-9387'
-scholar: 'EnRHC-4AAAAJ'
 
 
 # Sections
